--- a/assets/css/tier-list.css
+++ b/assets/css/tier-list.css
@@ -18,7 +18,7 @@
 }
 
 .tier-label {
-  width: 75px;
+  width: 85px;
   text-align: center;
   font-size: 20px;
   font-weight: bold;
